--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,10 @@ project(Projekt1)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Projekt1 main.cpp
+
+add_executable(Projekt1
+        main.cpp
         TablicaDynamiczna.cpp
-        TablicaDynamiczna.hpp
         TabliceGenerator.cpp
-        TabliceGenerator.hpp)
+        ListaJednokierunkowa.cpp
+)
