Zmiana interfejsu dla badan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,6 @@ add_executable(Projekt1
         TablicaDynamiczna.cpp
         TabliceGenerator.cpp
         ListaJednokierunkowa.cpp
+        Badanie.cpp
+        Badanie.hpp
 )
